[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rucsaxslib"
version = "0.0.1"
dependencies = [
  "numpy",
  "matplotlib",
  "fabio",
]
authors = [
  { name="Tim Tejsner", email="ttejsner@gmail.com" },
]
description = "Library for interacting with x-ray scattering data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tejsner/rucsaxslib"
Issues = "https://github.com/tejsner/rucsaxslib/issues"
